Fixed title spacing maybe?

--- a/docs/assets/css/dd_desktop.css
+++ b/docs/assets/css/dd_desktop.css
@@ -82,6 +82,7 @@
 				margin: 0px;
 				padding:  0px;
 				font-style: normal;
+				letter-spacing: -.5vw;
 				}
 
 			h2 {
