--- a/docs/assets/css/dd_mobile.css
+++ b/docs/assets/css/dd_mobile.css
@@ -83,6 +83,7 @@
 				margin: 0px;
 				padding:  0px;
 				font-style: normal;
+				letter-spacing: -.5vw;
 				}
 
 			h2 {
